# gtest

./: .gitignore  README.md
gtest_gmock/: CMakeLists.txt
gtest_gmock/include/: func.h
gtest_gmock/src/: func.cpp  main.cpp
